# jupyter-notebooks

./: Mathing.ipynb  pyproject.toml
